# faceage_workshop

./: .gitignore  README.md  pyproject.toml  run_faceage.py
faceage_workshop/: __init__.py  cli.py  legacy_model.py  predict.py
scripts/: download_assets.py
slides/: workshop_slides.md
