[project]
name = "faceage-workshop"
version = "0.1.0"
description = "Minimal uv-based FaceAge workshop demo for cropped and aligned face images."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "h5py>=3.10,<4",
    "numpy>=1.26,<2",
    "pandas>=2.2,<3",
    "pillow>=10,<12",
    "tensorflow==2.15.1",
]

[project.scripts]
faceage-run = "faceage_workshop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faceage_workshop"]

[tool.uv]
package = true
